# kuramoto

./: .clang-format  .gitignore  BA10.g6  CMakeLists.txt  LICENSE  Makefile  README.md  adj.cc  dist.cc  doit.sh  getopt.cc  graph.cc  graph.h  graph.hpp  graph6.cc  graphs.g6  kuramoto.cc  kuramoto.m  kuramoto_drift.cc  kuramoto_mpi.cc  kuramoto_omp.cc  kuramoto_onepath.cc  kuramoto_psi.cc  kuramoto_twosided_mpi.cc  kuramoto_x.cc  optimise  params.csv  params.xlsx  plot.gnuplot  process.h  statistics.cc  statistics.h  test_dist.cc  test_sum.cc  utils.h  variates.cc  variates.h  variates.hpp
